--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,38 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
+body {
+    height: 100%;
+}
+.ql-editor {
+    font-size: 1.05rem;
+}
+
+
+.post-content p {
+    margin-bottom: 0.5rem;
+}
+.post-content h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+}
+.post-content h1 {
+    font-size: 1.4rem;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+}
+.post-content a {
+    color: rgb(15, 138, 220);
+    text-decoration: none;
+}
+.post-content a:hover {
+    
+    text-decoration: underline;
+}
+.dark .post-content a {
+    color: rgb(100, 15, 220)
+}
